@@ -18,8 +18,8 @@
         <jetty.version>11.0.24</jetty.version>
         <aws-sdk.version>2.21.4</aws-sdk.version>
         <jackson.version>2.15.2</jackson.version>
-        <jruby.version>9.4.9.0</jruby.version>
-        <surefire.version>3.0.0-M5</surefire.version>
+        <jruby.version>9.4.13.0</jruby.version>
+        <surefire.version>3.5.3</surefire.version>
         <seleniumhq.version>2.53.1</seleniumhq.version><!-- There are many new versions for this library 4.10.0 latest-->
         <logback.version>1.2.13</logback.version> <!-- The next two need to be updated in lockstep latest version 1.4 -->
         <slf4j.version>1.7.36</slf4j.version> <!-- Latest version 2.0.7 -->
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
-            <version>7.4</version>
+            <version>7.3</version>
         </dependency>
         <!-- Heap-based object cache: https://github.com/ben-manes/caffeine-->
         <dependency>
@@ -153,8 +153,7 @@
         <dependency>
             <groupId>it.geosolutions.imageio-ext</groupId>
             <artifactId>imageio-ext-tiff</artifactId>
-            <!-- This seemed latest version 1.3.2: https://github.com/geosolutions-it/imageio-ext 2023 -->
-            <version>1.3.2</version>
+            <version>1.4.14</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -164,7 +163,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
+            <version>3.18.0</version>
         </dependency>
         <!-- Provides PDFBox for PdfBoxProcessor. Note that there are also some
         other dependencies in this POM used only by PDFBox. -->
@@ -183,7 +182,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.10.0-RC1</version>
+            <version>5.13.4</version>
             <scope>test</scope>
         </dependency>
         <!-- Performance tests -->
@@ -425,7 +424,7 @@
                     <reuseForks>false</reuseForks>
                     <!-- JAI requires this in JDK >= 16. -->
                     <!-- JAI requires this in JDK 16+. It should be removed when JAI is. -->
-                    <argLine>--illegal-access=permit --add-opens java.desktop/sun.awt.image=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.desktop/sun.awt.image=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
 
@@ -534,7 +533,7 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>9.0.9</version>
+                <version>12.1.3</version>
                 <executions>
                     <execution>
                         <goals>
